--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -2,93 +2,32 @@
 
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-<div ng-controller="LandingController">
-    <section class="hero">
-        <section class="navigation">
-            <header>
-                <div class="header-content">
-                    <div class="logo"><a href="#"><img src="img/logo.png" alt="TruRecruit"></a></div>
-                    <div class="header-nav" >
-                        <nav>
-                            <ul class="primary-nav">
-                            </ul>
-                            <ul class="member-actions">
-                                <li><a href="/login" class="login">Log in</a></li>
-                                <li><a href="/signup" class="btn-white btn-small">Sign up</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="navicon">
-                        <a class="nav-toggle" href="#"><span></span></a>
-                    </div>
-                </div>
-            </header>
-        </section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="hero-content text-center">
-                        <h1 style="font-weight: 800">BRINGING JOB FAIRS TO THE 21ST CENTURY</h1>
-                        <p class="intro">Easily track your job fair activity
-                            by digitally sharing your resume at job fairs, you can track the companies you gave your resume, and which companies downloaded it</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="bottomNav">
-            <p class="small_text"> sign up as a...</p>
-            <div class="row">
-                <div class="rom" >
-                    <a ng-click="goToState('access.register')" href="#features1"  class="candi col-md-6 col-xs-6 candidate">Candidate</a>
-                    <div class="divde"></div>
-                    <a href="#features"  class=" emply col-md-6 col-xs-6 employer">Employer</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <div class="contentEmployeer">
-
-        <!--<section class="features-extra section-padding" id="assets">-->
-
-        <!--<p>dlkfjsklfjsdlkfjsdlfjdslkbrlgh34o;gerogrjlgjlkgejgklkjljlgj34</p>-->
-        <!--<a href="/signup">Sign Up!</a>-->
-        <!--</section>-->
-
-
-
+<div class="landing-page" ng-controller="LandingController">
+<div class="landing-navbar">
+        <img src="http://imgh.us/FullFinalLogo.png" alt="" class="trurecruit-logo">
+        <div class="login-or-signup">
+          <a href="#" class="login" style="color:#FFF; text-decoration: none;">
+            <span>Log in</span>
+        </a>
+        <a href="#" class="signup" style="color:#FFF; text-decoration: none;">
+            <span>Sign Up</span>
+        </a>
     </div>
+</div>
 
-    <div class="contentCanidate">
+<div class="content">
+    <h1>Bringing Job fairs to the 21st century</h1>
+    <p class="intro">
+      Easily track your job fair activity by digitally sharing your resume at job fairs, you can track the companies you gave your resume, and which companies downloaded it
+  </p>
+</div>
 
-
-        <p>dlkfjsklfjsdlkfjsdlfjdslkbrlgh34o;gerogrjlklnklnklgjlkgejgklgj34</p>
-        <a href="/signup">Sign Up!</a>
-        <p>commit</p>
-        <p>hello</p>
-
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-    </footer>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-    <!-- <script src="bower_components/retina.js/dist/retina.js"></script> -->
-    <script src="js/jquery.fancybox.pack.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-    <script src="js/jquery.flexslider-min.js"></script>
-    <script src="bower_components/classie/classie.js"></script>
-    <script src="bower_components/jquery-waypoints/lib/jquery.waypoints.min.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<div class="bottom-nav-bar">
+    <a href = "#" style="color:#FFF; text-decoration: none;"class="candidate-button">
+      Candidate
+  </a>
+  <a href = "#" style="color:#FFF; text-decoration: none;" class="employer-button">
+      Employer
+  </a>
+</div>
 </div>
