- Hacky way to make the bg of landing page appear to fill out the entire screen. “100%” for some reason does not work as the height

--- a/app/css/landing_page.css
+++ b/app/css/landing_page.css
@@ -5,8 +5,8 @@
 
 
 
-body{
-  height: 100%;
+.landing-page{
+  height: 750px;
   background: url(https://unsplash.it/1920/1080?image=4) no-repeat;
 }
 
