Fix bugs in logo positioning in topbar

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9646,15 +9646,16 @@ border-left: 3px solid transparent;
     background-image: url('http://imgh.us/FullFinalLogo.png');
     background-size: 150px;
     background-repeat: no-repeat;
-    background-position: center;
     text-align: center;
+    background-position: center left 10px; 
 
 }
 
 .page-topbar.sidebar_shift .logo-area {
-    background-image: url('../img/logo-folded.png');
+    background-image: url('https://s30.postimg.org/tjg9d2j9t/profile_picture.png');
+    background-size: 50px;
     background-repeat: no-repeat;
-    background-position: right top;
+    background-position: center left 10px;
 }
 
 .page-topbar.chat_shift .logo-area {
