--- a/app/partials/components/topbar.html
+++ b/app/partials/components/topbar.html
@@ -5,7 +5,7 @@
     <div class='pull-left slantit'>
         <ul class="info-menu left-links list-inline list-unstyled">
             <li class="sidebar-toggle-wrap">
-                <a href class="sidebar_toggle">
+                <a href data-toggle="sidebar" class="sidebar_toggle" ng-click="app.settings.menuFolded = !app.settings.menuFolded; menuChatToggle('menu',app.settings.menuFolded) ">
                     <i class="material-icons">menu</i>
                 </a>
             </li>
