Created app.resume state
- Created app.resume state
-

--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -1,6 +1,13 @@
 <!-- list -->
 <ul class="wraplist wrapper-menu">
-  
+    
+    <li ui-sref-active="active" >
+        <a ui-sref="app.resume" class="nosub">
+            <i class="fa fa-file-pdf-o"></i>
+            <span class="title">Resume</span>
+        </a>
+    </li>
+
     <li ui-sref-active="active">
         <a ui-sref="app.dashboard" class="nosub">
             <i class="material-icons">event</i>
