--- a/app/partials/ui-register.html
+++ b/app/partials/ui-register.html
@@ -1,50 +1,38 @@
-<div class="login_page">
+  <div class="login_page">
     <div class="register-wrapper" ng-controller="RegisterFormController">
-        <div id="register" class="login loginpage col-lg-offset-4 col-lg-4 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-offset-2 col-xs-8">
-         <div class="logo">
-            <img style="width:150px;" src="http://imgh.us/FullFinalLogo.png" alt="TruRecruit">
-        </div>
-         <form  name="form" class="form-validation">
+      <div id="register" class=
+      "login loginpage col-lg-offset-4 col-lg-4 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-offset-2 col-xs-8">
+      <div class="logo"><img style="width:150px;" src="http://imgh.us/FullFinalLogo.png"
+        alt="TruRecruit" /></div>
+
+        <form name="form" class="form-validation" id="form">
           <div class="text-danger wrapper text-center" ng-show="authError">
-              {{authError}}
+            {{authError}}
           </div>
-          <p>
 
-            <input type="text" name="name" id="user_name" class="input"  ng-model="user.name" placeholder="Full Name" required /></label>
-        </p>
-        <p>
+          <p><input type="text" name="name" id="user_name" class="input" ng-model=
+          "user.name" placeholder="Full Name" required="" /></p>
 
-            <input type="email" name="log" id="user_login" class="input" ng-model="user.email" placeholder="Email" required /></label>
-        </p>
-        <p>
+          <p><input type="email" name="log" id="user_login" class="input" ng-model=
+          "user.email" placeholder="Email" required="" /></p>
 
-            <input type="password" name="pwd" id="user_pass" class="input" ng-model="user.password" placeholder="Password" required/></label>
-        </p>
-        <p class="forgetmenot">
-            <label class="icheck icheck-white" for="rememberme">
-                <input type="checkbox" value="forever" name="rememberme" checked id="rememberme">
-                <i></i> I agree to terms to conditions
-            </label>
-        </p>
+          <p><input type="password" name="pwd" id="user_pass" class="input" ng-model=
+          "user.password" placeholder="Password" /></p>
 
+          <p class="forgetmenot"><label class="icheck icheck-white" for=
+          "rememberme"><input type="checkbox" value="forever" name="rememberme" checked=
+          "checked" id="rememberme" /> I agree to terms to conditions</label></p>
 
+          <p class="submit"><button type="submit" name="wp-submit" id="wp-submit" class=
+          "btn btn-accent btn-block" ng-click="register()">Sign Up</button></p>
+        </form>
 
-        <p class="submit">
-            <button type="submit" name="wp-submit" id="wp-submit" class="btn btn-accent btn-block" ng-click="register()" >Sign Up</button>
-        </p>
-    </form>
+        <p id="nav"><a class="pull-left" ui-sref="access.forgotpwd" title=
+        "Password Lost and Found">Forgot password?</a> <a class="pull-right" ui-sref=
+        "access.login" title="Sign Up">Sign In</a></p>
 
-    <p id="nav">
-        <a class="pull-left" ui-sref="access.forgotpwd"  title="Password Lost and Found">Forgot password?</a>
-        <a class="pull-right"  ui-sref="access.login" title="Sign Up">Sign In</a>
-    </p>
-    <div class="clearfix"></div>
-
-
-</div>
-</div>
-</div>
-
-
-
+        <div class="clearfix"></div>
+      </div>
+    </div>
+  </div>
 
