--- a/app/partials/ui-resume.html
+++ b/app/partials/ui-resume.html
@@ -1,6 +1,7 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Resume';">
    <div class="rsm-container">
-      <div class="personal-info-box">
+      <div class="box-container">
+          <div class="personal-info-box">
          <div class="upload-picture-area">
             <img src="https://www.purdue.edu/gradschool/gspd/images/ppl/empty.png" alt="" class="profpic-placeholder">
             <a href="" class="upload-profpic-button hvr-shadow">
@@ -15,9 +16,15 @@
          </a>    
       </div>
       <div class="upload-resume-box">
-          <a href="" class="upload-resume-button"></a>
-          <a href="" class="preview-button"></a>
-          <a href="" class="done-button"></a>
+        
+          <a href="" class="upload-resume-button hvr-shadow">Upload Resume</a>
+          <div class="preview-done-container"> 
+            <a href="" class="preview-button hvr-shadow">Preview</a>
+            <a href="" class="done-button hvr-shadow">Done</a>
+        </div>
+      </div>
+      
+         
       </div>
    </div>
 </div>
