--- a/app/css/app.css
+++ b/app/css/app.css
@@ -657,7 +657,7 @@ blockquote,
 .blockquote-reverse,
 blockquote.pull-right {
     font-size: 16px;
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 blockquote.pull-right {
@@ -691,9 +691,9 @@ blockquote.bg-white {
 
 .well.primary,
 .well.primary * {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #ffffff;
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 .well.transparent {
@@ -705,7 +705,7 @@ blockquote.bg-white {
 }
 
 a {
-    color: #673AB7;
+    color: #46BE8A;
 }
 
 a:hover,
@@ -722,7 +722,7 @@ a:focus {
 }
 
 .text-primary {
-    color: #673AB7;
+    color: #46BE8A;
 }
 
 .text-info {
@@ -779,7 +779,7 @@ a:focus {
 }
 
 .bg-primary {
-    background: #673AB7;
+    background: #46BE8A;
     padding: 3px 8px;
     color: #ffffff;
 }
@@ -2007,7 +2007,7 @@ section header {
     display: inline-block;
     background-color: transparent;
     border: 0px solid rgba(0, 0, 0, 0.12);
-    border-bottom: 0px solid #673AB7;
+    border-bottom: 0px solid #46BE8A;
     vertical-align: top;
     position: relative;
 }
@@ -2223,7 +2223,7 @@ section.primary header.panel_header .title:after,
 section.primary .content-body,
 section.primary .panel_header .actions,
 section.primary .panel_header .actions:before {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #f5f5f5;
 }
 
@@ -2380,7 +2380,7 @@ textarea,
 .form-control:focus,
 .has-focus .form-control {
     background: transparent;
-    border-color: #673AB7;
+    border-color: #46BE8A;
     outline: 0;
     box-shadow: none;
     -webkit-box-shadow: none;
@@ -2466,7 +2466,7 @@ fieldset[disabled] .form-control {
 }
 
 .input-group.focus .input-group-addon {
-    border-bottom: 2px solid #673AB7;
+    border-bottom: 2px solid #46BE8A;
 }
 
 .input-group-addon:last-child {
@@ -2505,7 +2505,7 @@ fieldset[disabled] .form-control {
 
 .input-group .input-group-btn.input-focus button,
 .input-group .input-group-addon.input-focus {
-    border-color: #673AB7;
+    border-color: #46BE8A;
     height: 34px;
 }
 
@@ -2532,13 +2532,13 @@ fieldset[disabled] .form-control {
 
 .input-group.primary .input-group-addon,
 .input-group.primary .input-group-btn button {
-    border-color: #673AB7;
+    border-color: #46BE8A;
     background-color: transparent;
-    color: #673AB7;
+    color: #46BE8A;
 }
 
 .input-group.primary .form-control {
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 .input-group.accent .input-group-addon,
@@ -2569,7 +2569,7 @@ fieldset[disabled] .form-control {
 
 .input-group.transparent .input-group-addon.input-focus {
     background-color: #f8f8f8;  
-    border: 1px solid #673AB7;
+    border: 1px solid #46BE8A;
     border-right: 0px;
 }
 
@@ -2595,11 +2595,11 @@ select.input-lg {
 /*Form slider (angular)*/
 
 slider span.bar.selection {
-    background-color: #673AB7 !important;
+    background-color: #46BE8A !important;
 }
 
 slider span.pointer.active:after {
-    background-color: #673AB7 !important;
+    background-color: #46BE8A !important;
 }
 
 
@@ -2814,8 +2814,8 @@ slider span.pointer.active:after {
 }
 
 .btn.btn-border.btn-primary {
-    border: 1px solid #673AB7;
-    color: #673AB7;
+    border: 1px solid #46BE8A;
+    color: #46BE8A;
     background: transparent;
 }
 
@@ -2878,7 +2878,7 @@ slider span.pointer.active:after {
 }
 
 .btn.btn-primary {
-    background: #673AB7;
+    background: #46BE8A;
     color: #ffffff;
 }
 
@@ -3309,12 +3309,12 @@ fieldset[disabled] .btn {
 }
 
 .alert-primary {
-    background: #673AB7;
+    background: #46BE8A;
     color: #ffffff;
 }
 
 .alert-primary.minimal {
-    border-left: 5px solid #673AB7;
+    border-left: 5px solid #46BE8A;
     color: #ffffff;
 }
 
@@ -3336,9 +3336,9 @@ fieldset[disabled] .btn {
 /*cg notifications plugin*/
 
 .cg-notify-message {
-    background-color: #673AB7 !important;
+    background-color: #46BE8A !important;
     color: #ffffff !important;
-    border: 1px solid #673AB7 !important;
+    border: 1px solid #46BE8A !important;
 }
 
 .cg-notify-close {
@@ -3413,7 +3413,7 @@ fieldset[disabled] .btn {
 
 .daterangepicker .ranges li.active,
 .daterangepicker .ranges li:hover {
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 .daterangepicker .ranges li.active,
@@ -3454,7 +3454,7 @@ fieldset[disabled] .btn {
 .datepicker td.active:hover.disabled,
 .datepicker td.active[disabled],
 .datepicker td.active:hover[disabled] {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     background-image: none;
     text-shadow: none;
 }
@@ -3613,7 +3613,7 @@ fieldset[disabled] .btn {
     box-shadow: inset 0 -1px 0 rgba(100, 100, 100, .15);
     -ms-box-shadow: inset 0 -1px 0 rgba(100, 100, 100, .15);
     -o-box-shadow: inset 0 -1px 0 rgba(100, 100, 100, .15);
-    background-color: #673AB7;
+    background-color: #46BE8A;
 }
 
 .progress-bar-striped {
@@ -3642,7 +3642,7 @@ fieldset[disabled] .btn {
 
 .tile-progress .progress.primary .progress-bar,
 .progress.primary .progress-bar {
-    background-color: #673AB7;
+    background-color: #46BE8A;
 }
 
 .tile-progress .progress.accent .progress-bar,
@@ -4024,23 +4024,23 @@ fieldset[disabled] .btn {
 }
 
 .tooltip.primary .tooltip-inner {
-    background-color: #673AB7;
+    background-color: #46BE8A;
 }
 
 .tooltip.primary.top .tooltip-arrow {
-    border-top-color: #673AB7;
+    border-top-color: #46BE8A;
 }
 
 .tooltip.primary.left .tooltip-arrow {
-    border-left-color: #673AB7;
+    border-left-color: #46BE8A;
 }
 
 .tooltip.primary.right .tooltip-arrow {
-    border-right-color: #673AB7;
+    border-right-color: #46BE8A;
 }
 
 .tooltip.primary.bottom .tooltip-arrow {
-    border-bottom-color: #673AB7;
+    border-bottom-color: #46BE8A;
 }
 
 .tooltip.secondary .tooltip-inner {
@@ -4091,7 +4091,7 @@ fieldset[disabled] .btn {
     padding: 8px 14px;
     margin: 0;
     font-size: 14px;
-    background-color: #673AB7;
+    background-color: #46BE8A;
     border-bottom: 0px solid #ebebeb;
     border-radius: 0px;
     -o-border-radius: 0px;
@@ -4142,7 +4142,7 @@ fieldset[disabled] .btn {
 }
 
 .popover.primary .popover-title {
-    background: #673AB7;
+    background: #46BE8A;
 }
 
 .popover.secondary .popover-title {
@@ -4226,7 +4226,7 @@ fieldset[disabled] .btn {
 }
 
 .dd-handle:hover {
-    color: #673AB7;
+    color: #46BE8A;
     background: #fff;
 }
 
@@ -4332,7 +4332,7 @@ fieldset[disabled] .btn {
 }
 
 .dd-hover > .dd-handle {
-    background: #673AB7 !important;
+    background: #46BE8A !important;
 }
 
 
@@ -4406,13 +4406,13 @@ fieldset[disabled] .btn {
 
 .accordion.primary .panel-group .panel-default .panel-heading,
 .accordion.primary .panel-group .panel-default .panel-heading a {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #ffffff;
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 .accordion.primary .panel-group .panel-default {
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 .accordion.primary .panel-group .panel-default>.panel-heading+.panel-collapse>.panel-body {
@@ -4553,8 +4553,8 @@ fieldset[disabled] .btn {
 .nav.primary .open>a,
 .nav.primary .open>a:hover,
 .nav.primary .open>a:focus {
-    background-color: #673AB7;
-    border-color: #673AB7;
+    background-color: #46BE8A;
+    border-color: #46BE8A;
     color: #ffffff;
 }
 
@@ -4598,9 +4598,9 @@ fieldset[disabled] .btn {
 }
 
 .tab-container.primary .nav-tabs > li > a {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #ffffff;
-    border: 1px solid #673AB7;
+    border: 1px solid #46BE8A;
 }
 
 .nav.primary >li>a:hover,
@@ -4615,16 +4615,16 @@ fieldset[disabled] .btn {
 .tab-container.primary .nav-tabs>li.active>a:focus {
     color: #616161;
     background-color: #fff;
-    border: 1px solid #673AB7;
+    border: 1px solid #46BE8A;
     border-bottom-color: transparent;
 }
 
 .tab-container.primary .nav-tabs {
-    border-bottom: 1px solid #673AB7;
+    border-bottom: 1px solid #46BE8A;
 }
 
 .tab-container.primary .tab-content {
-    border: 1px solid #673AB7;
+    border: 1px solid #46BE8A;
     border-top: 0px;
 }
 
@@ -4816,7 +4816,7 @@ fieldset[disabled] .btn {
 
 .fc-toolbar {
     color: #fff !important;
-    background-color: #673AB7 !important;
+    background-color: #46BE8A !important;
     border-radius: 0px 0px 0 0 !important;
     border-radius: 0px !important;
     -o-border-radius: 0px !important;
@@ -4983,8 +4983,8 @@ fieldset[disabled] .btn {
     right: -14px;
     display: inline-block;
     border-top: 14px solid transparent;
-    border-left: 14px solid #673AB7;
-    border-right: 0 solid #673AB7;
+    border-left: 14px solid #46BE8A;
+    border-right: 0 solid #46BE8A;
     border-bottom: 14px solid transparent;
     content: " ";
 }*/
@@ -5058,7 +5058,7 @@ fieldset[disabled] .btn {
 }
 
 .timeline-badge.primary {
-    background-color: #673AB7 !important;
+    background-color: #46BE8A !important;
 }
 
 .timeline-badge.success {
@@ -5274,7 +5274,7 @@ fieldset[disabled] .btn {
 }
 
 .price-pack.recommended .head {
-    background: #673AB7;
+    background: #46BE8A;
 }
 
 
@@ -5658,7 +5658,7 @@ table.dataTable.no-footer {
 }
 
 .icon-primary {
-    color: #673AB7;
+    color: #46BE8A;
 }
 
 .icon-success {
@@ -5695,7 +5695,7 @@ table.dataTable.no-footer {
 .icon-primary.icon-rounded,
 .icon-primary.icon-cornered,
 .icon-primary.icon-square {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #ffffff;
 }
 
@@ -5748,9 +5748,9 @@ table.dataTable.no-footer {
 }
 
 .icon-primary.icon-bordered {
-    border: 1px solid #673AB7;
+    border: 1px solid #46BE8A;
     background-color: transparent;
-    color: #673AB7;
+    color: #46BE8A;
 }
 
 .icon-success.icon-bordered {
@@ -5812,7 +5812,7 @@ table.dataTable.no-footer {
 .bs-glyphicons-list li .glyphicon,
 .retinaicons .fa-hover span i {
     min-width: 30px;
-    color: #673AB7;
+    color: #46BE8A;
     display: block;
     font-size: 48px;
     margin: 0 auto 10px auto;
@@ -6261,15 +6261,15 @@ code {
 .list-group-item.active:focus {
     text-shadow: none;
     background-image: none;
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 .list-group-item.active,
 .list-group-item.active:hover,
 .list-group-item.active:focus {
     color: #fff;
-    background-color: #673AB7;
-    border-color: #673AB7;
+    background-color: #46BE8A;
+    border-color: #46BE8A;
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -6334,7 +6334,7 @@ code {
 .breadcrumb.primary,
 .breadcrumb.primary a,
 .breadcrumb.primary li.active {
-    color: #673AB7;
+    color: #46BE8A;
 }
 
 .breadcrumb.auto-hidden li a.collapsed {
@@ -6411,8 +6411,8 @@ code {
 .pagination>.active>a:focus,
 .pagination>.active>span:focus {
     color: #fff;
-    background-color: #673AB7;
-    border-color: #673AB7;
+    background-color: #46BE8A;
+    border-color: #46BE8A;
 }
 
 .pager li>a,
@@ -6427,9 +6427,9 @@ code {
 
 .pager.primary li>a,
 .pager.primary li>span {
-    border: 1px solid #673AB7;
+    border: 1px solid #46BE8A;
     color: #ffffff;
-    background-color: #673AB7;
+    background-color: #46BE8A;
 }
 
 .pager.primary li>a:hover,
@@ -6467,7 +6467,7 @@ code {
 }
 
 .label-primary {
-    background-color: #673AB7;
+    background-color: #46BE8A;
 }
 
 .label-accent {
@@ -6564,7 +6564,7 @@ code {
 }
 
 .badge-primary {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #ffffff;
 }
 
@@ -6597,7 +6597,7 @@ code {
 .nav-pills>li.active>a:hover,
 .nav-pills>li.active>a:focus {
     color: #fff;
-    background-color: #673AB7;
+    background-color: #46BE8A;
 }
 
 .nav-pills>li>a {
@@ -7016,7 +7016,7 @@ code {
 /*
 #main-menu-wrapper li a:hover, 
 #main-menu-wrapper li.active a {
-background-color: #673AB7;
+background-color: #46BE8A;
 }
 #main-menu-wrapper li .sub-menu a {
 color: rgba(174,178,183,1.0);
@@ -7106,7 +7106,7 @@ border-left: 3px solid transparent;
     float: left;
     padding-left: 15px;
     width: 220px;
-    background: #673AB7;
+    background: #46BE8A;
     display: inline-block !important;
 }
 
@@ -7755,7 +7755,7 @@ border-left: 3px solid transparent;
 }
 
 .mail-wrapper {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #ffffff;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.0), 0 2px 2px rgba(0, 0, 0, 0.1);
     -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.0), 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -7827,7 +7827,7 @@ border-left: 3px solid transparent;
 }
 
 .mail-addlabel .focus .btn {
-    border-bottom: 2px solid #673AB7;
+    border-bottom: 2px solid #46BE8A;
 }
 
 .mail-addlabel.ng-invalid .focus .btn {
@@ -8108,7 +8108,7 @@ border-left: 3px solid transparent;
 }
 
 .r1_graph1 {
-    background: #673AB7;
+    background: #46BE8A;
     color: #ffffff;
 }
 
@@ -8261,7 +8261,7 @@ border-left: 3px solid transparent;
 }
 
 .r2_counter1 {
-    background: #673AB7;
+    background: #46BE8A;
     color: #ffffff;
 }
 
@@ -8675,8 +8675,8 @@ border-left: 3px solid transparent;
     -ms-border-radius: 0;
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
-    border-color: #673AB7;
-    background-color: #673AB7;
+    border-color: #46BE8A;
+    background-color: #46BE8A;
 }
 
 .wizardpills .tab-content {
@@ -8721,8 +8721,8 @@ border-left: 3px solid transparent;
 }
 
 .form-wizard li.complete a {
-    border-color: #673AB7;
-    background-color: #673AB7;
+    border-color: #46BE8A;
+    background-color: #46BE8A;
     font-family: FontAwesome;
     color: #ffffff;
     line-height: 16px;
@@ -9076,7 +9076,7 @@ border-left: 3px solid transparent;
 }
 
 .tile-progress.inverted.text-primary .progress .progress-bar {
-    background: #673AB7;
+    background: #46BE8A;
 }
 
 .tile-progress.inverted.text-info .progress .progress-bar {
@@ -9249,7 +9249,7 @@ border-left: 3px solid transparent;
 }
 
 .navbar.navbar-primary {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     border-color: transparent;
     color: #f5f5f5;
 }
@@ -9403,7 +9403,7 @@ border-left: 3px solid transparent;
 .ecommerce_product .thumb .overlay a i,
 .music_genre .thumb .overlay a i{
     opacity: 1;
-    color:#673AB7;
+    color:#46BE8A;
     font-size: 40px;
     position: absolute;
     top: 50%;
@@ -10694,7 +10694,7 @@ border-left: 3px solid transparent;
 
 /*
 .bg-muted{ background: #E0E0E0; padding: 3px 8px;}
-.bg-primary{ background: #673AB7; padding: 3px 8px; color: #ffffff;} #673AB7
+.bg-primary{ background: #46BE8A; padding: 3px 8px; color: #ffffff;} #46BE8A
 .bg-info{ background: rgba(35,183,229,1.0); padding: 3px 8px; color: #ffffff;} #23b7e5
 .bg-warning{ background: #fdb45d; padding: 3px 8px; color: #ffffff;}
 .bg-danger{ background: rgba(240,80,80,1.0); padding: 3px 8px; color: #ffffff;} #f05050
@@ -11207,15 +11207,15 @@ fieldset[disabled] .icheck input + i:before {
 /*icheck colors*/
 
 .icheck input:checked + i {
-    border-color: #673AB7;
+    border-color: #46BE8A;
 }
 
 .icheck input:checked + i:before {
-    color: #673AB7;
+    color: #46BE8A;
 }
 
 .icheck > i {
-    border: 1px solid #673AB7;
+    border: 1px solid #46BE8A;
 }
 
 .icheck.icheck-white input:checked + i {
@@ -11460,7 +11460,7 @@ fieldset[disabled] .icheck input + i:before {
 
 .sortable-list li.sortable-dragging,
 .sortable-grid li.sortable-dragging {
-    background-color: #673AB7;
+    background-color: #46BE8A;
     color: #fcfcfc;
 }
 
@@ -11498,7 +11498,7 @@ fieldset[disabled] .icheck input + i:before {
 
 .focus .bootstrap-touchspin-down,
 .focus .bootstrap-touchspin-up {
-    border-bottom: 2px solid #673AB7;
+    border-bottom: 2px solid #46BE8A;
 }
 
 .input-group-btn:first-child>.btn,
